--- a/info.yml
+++ b/info.yml
@@ -31,3 +31,6 @@ description: "Shotgun Integration for VRED"
 # Required minimum versions for this item to run
 requires_shotgun_version:
 requires_core_version: "v0.18.116"
+
+frameworks:
+  - {"name": "tk-framework-locking", "version": "v0.x.x"}
