--- a/info.yml
+++ b/info.yml
@@ -17,9 +17,10 @@ configuration:
 
     render_template:
         type: template
-        description: "This template is to set de initial render file path."
+        description: "Template to use to determine where to set the VRED render images.
+                      This should be a string specifying the template to use but can also be
+                      empty if you do not wish the VRED render path to be automatically set."
         allows_empty: true
-        fields: sg_asset_type, Asset, Step, scene_name
 
 # the Shotgun fields that this engine needs in order to operate correctly
 requires_shotgun_fields:
