--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,7 @@ repos:
     # Ensures a file name will resolve on all platform
     - id: check-case-conflict
     # Checks files with the execute bit set have shebangs
-    #- id: check-executables-have-shebangs
+    - id: check-executables-have-shebangs
     # Ensure there's no incomplete merges
     - id: check-merge-conflict
     # Adds an empty line if missing at the end of a file.
@@ -33,7 +33,7 @@ repos:
     - id: trailing-whitespace
   # Leave black at the bottom so all touchups are done before it is run.
   - repo: https://github.com/ambv/black
-    rev: 19.10b0
+    rev: 20.8b0
     hooks:
     - id: black
       language_version: python3
