--- a/info.yml
+++ b/info.yml
@@ -42,6 +42,13 @@ configuration:
                         value to the current major version + 1."
         default_value:  2021
 
+    accepted_published_file_types:
+        type: list
+        values: { type: str }
+        default_value: [ VRED Scene, Alias File, Catpart File, Jt File, Igs File ]
+        description: "A list of PublishedFileTypes that are allowed for review with VRED."
+
+
 # the Shotgun fields that this engine needs in order to operate correctly
 requires_shotgun_fields:
 
