--- a/info.yml
+++ b/info.yml
@@ -42,6 +42,11 @@ configuration:
                         value to the current major version + 1."
         default_value:  2022
 
+    compatibility_dialog_old_version:
+        type: bool
+        description: "Disable warning about older versions of VRED"
+        default_value: True
+
     accepted_published_file_types:
         type: list
         values: { type: str }
@@ -49,7 +54,7 @@ configuration:
         description: "A list of PublishedFileTypes that are allowed for review with VRED."
 
 
-# the Shotgun fields that this engine needs in order to operate correctly
+# the ShotGrid fields that this engine needs in order to operate correctly
 requires_shotgun_fields:
 
 # More verbose description of this item
